# music-classifier

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/processed/: features.csv  labels.csv
data/raw/: autotagging_instrument.tsv  autotagging_moodtheme.tsv
models/: cnn_model.h5  important_features.npy  scaler.pkl
notebooks/: cleaning.ipynb  exploration.ipynb
src/: data_processing.py  model_training.py  predict_genre.py  utils.py
tests/: test_data_processing.py  test_model_training.py  test_utils.py
