[tool.poetry]
name = "music-classifier"
version = "0.1.0"
description = ""
authors = ["Flavian Reignault <flavian.reignault@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
tensorflow = "^2.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
